samples/_failures_safe/1761407679_0483d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22359964.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_22359964.c:144:13: error: expected declaration or statement at end of input
  144 |             dijkstra(graph, start);
      |             ^~~~~~~~
./samples/SAFE/__tmp_22359964.c:144:13: error: expected declaration or statement at end of input
